--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,23 +18,23 @@
         <div id="display"></div>
         <div class="buttons">
             <div class="button">C</div>
-            <div class="button">/</div>
-            <div class="button">*</div>
+            <div class="button operator">/</div>
+            <div class="button operator">*</div>
             <div class="button">&larr;</div>
-            <div class="button">7</div>
-            <div class="button">8</div>
-            <div class="button">9</div>
-            <div class="button">-</div>
-            <div class="button">4</div>
-            <div class="button">5</div>
-            <div class="button">6</div>
-            <div class="button">+</div>
-            <div class="button">1</div>
-            <div class="button">2</div>
-            <div class="button">3</div>
+            <div class="button number">7</div>
+            <div class="button number">8</div>
+            <div class="button number">9</div>
+            <div class="button operator">-</div>
+            <div class="button number">4</div>
+            <div class="button number">5</div>
+            <div class="button number">6</div>
+            <div class="button operator">+</div>
+            <div class="button number">1</div>
+            <div class="button number">2</div>
+            <div class="button number">3</div>
             <div class="button">.</div>
             <div class="button">(</div>
-            <div class="button">0</div>
+            <div class="button number">0</div>
             <div class="button">)</div>
             <div id="equal" class="button">=</div>
         </div>
